force-app/main/default/objects/PMC_SS_ActualPayment__c/PMC_SS_ActualPayment__c.object-meta.xml
<CustomObject>
    <description>This Object will be used to update Settlement data from SAP via integration when Settlement is generated in SAP.</description>
    <label>Actual Payment</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Actual Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actual Payments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>