force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_AddressLineOfPayer__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AddressLineOfPayer__c</fullName>
    <description>Address Line of Payment Recipient</description>
    <label>Address Line Of Payer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>