force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_ConditionContractNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ConditionContractNumber__c</fullName>
    <description>Condition Contract Number</description>
    <label>Condition Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>