force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_CreatedOn__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CreatedOn__c</fullName>
    <description>Settlement Document system created on date</description>
    <label>Created On</label>
    <type>Date</type>
</CustomField>