force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_DocumentDateinDocument__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_DocumentDateinDocument__c</fullName>
    <description>The document date is the date on which the original document was issued.</description>
    <label>Document Date in Document</label>
    <type>Date</type>
</CustomField>