force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_DocumentItem__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_DocumentItem__c</fullName>
    <description>Settlement document Item number</description>
    <label>Document Item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>