force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_ExternalSalesAgreementIdentifier__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ExternalSalesAgreementIdentifier__c</fullName>
    <externalId>true</externalId>
    <label>External Sales Agreement Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>