force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_ItemNetAmtforCustInDocCurrency__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ItemNetAmtforCustInDocCurrency__c</fullName>
    <description>Value of all settlement document items excluding tax in the document currency.</description>
    <label>Item Net Amount for Cust In Doc Currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>