force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_ItemTaxAmtofCustInDocCurrency__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ItemTaxAmtofCustInDocCurrency__c</fullName>
    <description>The total sales taxes, expressed in the document currency.</description>
    <label>Item Tax Amount of Cust In Doc Currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>