force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_NetPriceinDocumentCurrency__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_NetPriceinDocumentCurrency__c</fullName>
    <description>Net Value per unit</description>
    <label>Net Price in Document Currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>