force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_Payer__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner with whom the rebate is settled.</description>
    <label>Payer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Actual Payments</relationshipLabel>
    <relationshipName>PMC_SS_ActualPaymentsAccount</relationshipName>
    <type>Lookup</type>
</CustomField>