force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_PostingDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_PostingDate__c</fullName>
    <description>Indicates the posting date of the settlement document list.</description>
    <label>Posting Date</label>
    <type>Date</type>
</CustomField>