force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_PriceUnitofSettlementDocumentItem__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_PriceUnitofSettlementDocumentItem__c</fullName>
    <description>Unit of Measure (eg TON)</description>
    <label>Price Unit of Settlement Document Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>