force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ProductFamily__c</fullName>
    <description>Material Group</description>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>