force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_ProductId__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Material number</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Actual Payments</relationshipLabel>
    <relationshipName>PMC_SS_ActualPaymentsProduct</relationshipName>
    <type>Lookup</type>
</CustomField>