force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_QtyofSettlementManagementDocItem__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_QtyofSettlementManagementDocItem__c</fullName>
    <description>Quantity of Settlement document Item</description>
    <label>Qty of Settlement Management Doc Item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>