force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_RebateProgramType__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_RebateProgramType__c</fullName>
    <description>Classification used to differentiate between different types of condition contracts.</description>
    <label>Rebate Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZR01</fullName>
                <label>Individual Rebate</label>
            </value>
            <value>
                <fullName>ZR02</fullName>
                <label>Portfolio Rebate</label>
            </value>
            <value>
                <fullName>ZR03</fullName>
                <label>Growth Rebate</label>
            </value>
            <value>
                <fullName>ZR05</fullName>
                <label>Blended Rebate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>