force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_ReversedDocument__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ReversedDocument__c</fullName>
    <description>Document number populated if settlement document is reversed</description>
    <label>Reversed Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>