force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_SalesAgreement__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SalesAgreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the Sales Agreement Id related to Settlement</description>
    <label>Sales Agreement</label>
    <referenceTo>SalesAgreement</referenceTo>
    <relationshipLabel>Actual Payments</relationshipLabel>
    <relationshipName>Actual_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>