force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_SettlementDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SettlementDate__c</fullName>
    <description>Condition contract settlement date</description>
    <label>Settlement Date</label>
    <type>Date</type>
</CustomField>