force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_SettlementDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SettlementDocumentNumber__c</fullName>
    <description>Document number that uniquely identifies a settlement document.</description>
    <label>Settlement Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>