force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_SettlementDocumentType__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SettlementDocumentType__c</fullName>
    <description>Classifies various types of documents in Settlement Management. Eg, Sales Rebate Credit, Sales Rebate Delta Accruals</description>
    <label>Settlement Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0S12</fullName>
                <label>Sales Rebate</label>
            </value>
            <value>
                <fullName>0S14</fullName>
                <label>Sales Rebate Reversal</label>
            </value>
            <value>
                <fullName>0S32</fullName>
                <label>Sales Rebate Manual</label>
            </value>
            <value>
                <fullName>0S34</fullName>
                <label>Sales Manual Rebate Reversal</label>
            </value>
            <value>
                <fullName>0S42</fullName>
                <label>Sales Rebate Delta Accruals</label>
            </value>
            <value>
                <fullName>0S44</fullName>
                <label>Sales Rebate Delta Accruals Reversal</label>
            </value>
            <value>
                <fullName>0S4B</fullName>
                <label>Sales Rebate Manual Delta Accruals</label>
            </value>
            <value>
                <fullName>0S4D</fullName>
                <label>Sales Rebate Manual Delta Accruals Rev</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>