force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_SettlementDocumentTypeDescription__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SettlementDocumentTypeDescription__c</fullName>
    <description>Settlement Type description</description>
    <label>Settlement Document Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>