force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_ShortText__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ShortText__c</fullName>
    <description>Material description</description>
    <label>Short Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>