force-app/main/default/objects/PMC_SS_ActualPayment__c/fields/PMC_SS_UnitofMeasureofSettlemntDocItemQt__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_UnitofMeasureofSettlemntDocItemQt__c</fullName>
    <description>Unit of Measure (eg TON)</description>
    <label>Unit of Measure of Settlement DocItemQty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>